--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -526,6 +526,11 @@ ul {
   margin-bottom: 45px;
 }
 
+.pbb-45 {
+  padding-top: 82px;
+  padding-bottom: 45px;
+}
+
 .mb-50 {
   margin-bottom: 50px;
 }
